Tray to fix now present bs margin on collapse navbar

--- a/src/ces.sitetheme/ces/sitetheme/resources/less/application.less
+++ b/src/ces.sitetheme/ces/sitetheme/resources/less/application.less
@@ -60,7 +60,8 @@ input.context {
 .topbar {
     border-top: @line-height-computed / 2 solid @brand-primary;
     .navbar-main {
-        padding-left: 0px;
+        margin-top: 0;
+        padding-left: 0;
         border-radius: 0;
         background:transparent;
         border-bottom: 2px solid @brand-primary;
@@ -73,7 +74,7 @@ input.context {
       &:hover {
         //color: @gray-dark;
         //background-color: @body-bg;
-        border-radius: 0px;
+        border-radius: 0;
       }
     }
     &.active > a,
